move tail to head

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ venv.bak/
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project settinggit s
 .ropeproject
 
 # mkdocs documentation
